...
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.334">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/Register_editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputEmail"
            android:singleLine="true"
            android:imeOptions="actionNext"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/Register_textInputLayoutPass1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintStart_toStartOf="@+id/Register_textInputLayoutEmail"
        app:layout_constraintTop_toBottomOf="@+id/Register_textInputLayoutEmail"
        app:layout_constraintVertical_bias="0.0"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/Register_editTextPass1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/inputPass"
            android:inputType="textPassword"
            android:singleLine="true"
            android:imeOptions="actionNext"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/Register_textInputLayoutPass2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintStart_toStartOf="@+id/Register_textInputLayoutPass1"
        app:layout_constraintTop_toBottomOf="@+id/Register_textInputLayoutPass1"
        app:layout_constraintVertical_bias="0.0"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/Register_editTextPass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/RegisterPass2RAW"
            android:inputType="textPassword"
            android:singleLine="true"
            android:imeOptions="actionNext"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/Register_btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/RegisterButtonRegister"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/Register_checkBoxAgree"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="@+id/Register_checkBoxAgree"
        app:layout_constraintTop_toBottomOf="@+id/Register_checkBoxAgree"
        app:layout_constraintVertical_bias="0.11"
        style="@style/Widget.AppCompat.Button.Colored"/>

...
