...
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/RegisterAgreementsDetails"
                />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/register_btnAgreementAcceptedYES"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/register_textViewAgreementsDetails"
                android:text="@string/RegisterAgreementsDetailsYES"
                style="@style/Widget.AppCompat.Button.Colored"
                />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/register_btnAgreementAcceptedNO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/register_btnAgreementAcceptedYES"
                android:text="@string/RegisterAgreementsDetailsNO"
                style="@style/Widget.AppCompat.Button.Colored"
                />
...
